
[TestModal_UpdatePurpose/view - 1]
TestModal_UpdatePurpose/view
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ResourceMenuView",
      "Data": {
        "Type": "ResourceMenuView",
        "Handle": "old-purpose-ws",
        "ItemCount": 5,
        "SelectedIdx": 0
      }
    }
  ]
}
---

[TestModal_UpdatePurpose/dismiss_esc - 1]
TestModal_UpdatePurpose/dismiss_esc
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    }
  ]
}
---
